# KameHouse-Server

./: .antigravityignore  .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  AUDITORIA_DS.md  DESIGN_SYSTEM_v2_BACKUP.md  IMPLEMENTATION_PLAN.md  KameHouse.bat  KameHouseMedia - Acceso directo.lnk  MIGRATION_PLAN.md  Makefile  README.md  backend_instructive.md  docker-compose.yml  frontend_instructive.md  go.work.sum  implementation_plan.md  package.json  pnpm-lock.yaml  pnpm-lock.yaml.3485395486  pnpm-workspace.yaml  pnpm-workspace.yaml.972327403
.github/workflows/: ci.yml
apps/: KameHouseTV.7z
apps/KameHouseTV/: .manifest.tmp  KameHouseTV.wgt  author-signature.xml  build.ps1  config.xml  index.html  signature1.xml  tizen_web_project.yaml
apps/desktop/: copy-server.js  debug_install.js  fix_path.js  manual_electron_installer.js  package-lock.json  package.json  sync-web.js
apps/desktop/src-tauri/: Cargo.toml  build.rs  build_err.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ipc.rs  lib.rs  main.rs  settings.rs  sidecar.rs  tray.rs  updater.rs  window.rs
apps/server/: .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  build_errors.txt  build_errors_fast.txt  clear_cache.go  config.example.toml  go.mod  go.sum  main.go  scratch_fix.go  ts_test_out.txt  wails.json  webview_other.go  webview_windows.go
apps/web/: .browserslistrc  .env.web  .env.web.example  Makefile  README.md  errors.txt  eslint.config.js  index.html  lint_output.txt  lint_output_utf8.txt  lint_results.txt  lint_results_utf8.txt  out.txt  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  rsbuild.jassub.ts  rsbuild.pwa.ts  tailwind.config.ts  ts-errors-utf8.txt  ts_errors.txt  ts_strict_errors.txt  tsc-errors.txt  tsconfig.test.json  (+3 more)
apps/web/src-tauri/: Cargo.toml
apps/web/src-tauri/src/: main.rs
docs/: PROJECT_MANIFESTO.md
scratch/: check_db.go  check_dbz_meta.go  check_dbz_tmdb.go  query_db.go  query_dbz_eps.go  repair_dbz_abs.go  test_db.go  test_enrich.go  test_resolver.go
tools/: rebrand.js
(+1075 files in other folders)
