[package]
name = "kamehouse-desktop"
version = "0.1.0"
description = "Tauri-based Desktop client for KameHouse"
authors = ["KameHouse"]
license = "MIT"
repository = "https://github.com/5rahim/kamehouse"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kamehouse_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
directories = "5.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "stream"] }

[profile.dev]
debug = 0
split-debuginfo = "off"
