[package]
name = "kamehouse"
version = "0.1.0"
description = "Antigravity V3 Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip panic handlers
codegen-units = 1 # Compile entire crate as one unit
lto = true # Link Time Optimization for size
opt-level = "z" # Optimize for size
strip = true # Automatically strip symbols from the binary
